{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 51,
  "lineage": "7a936f3e-33fe-dd0b-994d-decb6ee413f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "stage-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3b010f7cfb0b4ba",
            "association_id": "eipassoc-05cca70ddac165ed5",
            "domain": "vpc",
            "id": "eipalloc-0d3b010f7cfb0b4ba",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a09539da1cac56ae",
            "private_dns": "ip-10-0-1-65.ap-south-1.compute.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-43-204-188-125.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.188.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cicd-apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01216e7612243e0ef",
            "arn": "arn:aws:ec2:ap-south-1:983098380356:instance/i-096e374cc1cf524e4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096e374cc1cf524e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbe0c65f84ecd2f9",
            "private_dns": "ip-172-31-44-11.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.11",
            "public_dns": "ec2-65-0-26-91.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.26.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2bcae4dda37f8c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "cicd-apache-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b5985f32594823a",
            "tags": {
              "Name": "cicd-tomcat"
            },
            "tags_all": {
              "Name": "cicd-tomcat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6dde70c0921fb90"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo1",
            "aws_security_group.cicd-apache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cicd-jen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01216e7612243e0ef",
            "arn": "arn:aws:ec2:ap-south-1:983098380356:instance/i-0c88e604ffc67d414",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c88e604ffc67d414",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "demo1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07809dda80c67768b",
            "private_dns": "ip-172-31-44-115.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.115",
            "public_dns": "ec2-13-232-82-169.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.82.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07018377f1ecfe4a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "cicd-jen-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b5985f32594823a",
            "tags": {
              "Name": "cicd-jen"
            },
            "tags_all": {
              "Name": "cicd-jen"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099b0c931c7d1a26d"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo1",
            "aws_security_group.cicd-jen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:internet-gateway/igw-06d100ca0f18024f9",
            "id": "igw-06d100ca0f18024f9",
            "owner_id": "983098380356",
            "tags": {
              "Name": "stage-igw"
            },
            "tags_all": {
              "Name": "stage-igw"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stage-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3b010f7cfb0b4ba",
            "connectivity_type": "public",
            "id": "nat-06f9350f914e36a27",
            "network_interface_id": "eni-0a09539da1cac56ae",
            "private_ip": "10.0.1.65",
            "public_ip": "43.204.188.125",
            "subnet_id": "subnet-04cd005c6d6bac2f4",
            "tags": {
              "Name": "stage-Ngw"
            },
            "tags_all": {
              "Name": "stage-Ngw"
            }
          },
          "dependencies": [
            "aws_eip.stage-eip",
            "aws_subnet.stage-pub",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stage-rout-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:route-table/rtb-0138bfa80ae6c2bee",
            "id": "rtb-0138bfa80ae6c2bee",
            "owner_id": "983098380356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06f9350f914e36a27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-private-route"
            },
            "tags_all": {
              "Name": "stage-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.stage-eip",
            "aws_nat_gateway.stage-ngw",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stage-rout-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:route-table/rtb-078864d1428f11849",
            "id": "rtb-078864d1428f11849",
            "owner_id": "983098380356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d100ca0f18024f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-pub-route"
            },
            "tags_all": {
              "Name": "stage-pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea0bc89f7a9d0fd",
            "route_table_id": "rtb-078864d1428f11849",
            "subnet_id": "subnet-0c516bb12ec3cc1a7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.stage-rout-pub",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d231debaa8654ac8",
            "route_table_id": "rtb-078864d1428f11849",
            "subnet_id": "subnet-04cd005c6d6bac2f4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.stage-rout-pub",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e5851480fba759",
            "route_table_id": "rtb-078864d1428f11849",
            "subnet_id": "subnet-09671929274ef7cbc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.stage-rout-pub",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cicd-apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:security-group/sg-0a6dde70c0921fb90",
            "description": "acess the end user ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6dde70c0921fb90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting with admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting with enduser",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cicd-apache-sg",
            "name_prefix": "",
            "owner_id": "983098380356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-apache-sg"
            },
            "tags_all": {
              "Name": "cicd-apache-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020e39c61ad892bfd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cicd-jen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:security-group/sg-099b0c931c7d1a26d",
            "description": "acess the end user ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099b0c931c7d1a26d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting with admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting with enduser",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cicd-jen-sg",
            "name_prefix": "",
            "owner_id": "983098380356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-jen-sg"
            },
            "tags_all": {
              "Name": "cicd-jen-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020e39c61ad892bfd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-0ac310ffbc3dd5904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac310ffbc3dd5904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-1-subnet"
            },
            "tags_all": {
              "Name": "stage-data-1-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-069ce8e1fd80912a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069ce8e1fd80912a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-2-subnet"
            },
            "tags_all": {
              "Name": "stage-data-2-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-03bf855cc6aa5b569",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bf855cc6aa5b569",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-3-subnet"
            },
            "tags_all": {
              "Name": "stage-data-3-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-0b1c55d9d3dc2d908",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1c55d9d3dc2d908",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-1-subnet"
            },
            "tags_all": {
              "Name": "stage-private-1-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-0f3a67abcd3d37ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3a67abcd3d37ea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-2-subnet"
            },
            "tags_all": {
              "Name": "stage-private-2-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-0b08630d540997755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b08630d540997755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-3-subnet"
            },
            "tags_all": {
              "Name": "stage-private-3-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-0c516bb12ec3cc1a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c516bb12ec3cc1a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-1-subnet"
            },
            "tags_all": {
              "Name": "stage-pub-1-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-04cd005c6d6bac2f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cd005c6d6bac2f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-2-subnet"
            },
            "tags_all": {
              "Name": "stage-pub-2-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:subnet/subnet-09671929274ef7cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09671929274ef7cbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-3-subnet"
            },
            "tags_all": {
              "Name": "stage-pub-3-subnet"
            },
            "vpc_id": "vpc-0a85a8e733680a0b1"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stage-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983098380356:vpc/vpc-0a85a8e733680a0b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc54a2d888cccd51",
            "default_route_table_id": "rtb-0a52be335ee1a06c3",
            "default_security_group_id": "sg-0dc8e877d67106d5d",
            "dhcp_options_id": "dopt-07dc9f45ad672793b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a85a8e733680a0b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a52be335ee1a06c3",
            "owner_id": "983098380356",
            "tags": {
              "Name": "stage-vpc"
            },
            "tags_all": {
              "Name": "stage-vpc"
            }
          }
        }
      ]
    }
  ]
}